# qask

./: LICENSE  README.md  pyproject.toml
qask/: __init__.py  __main__.py  console.py  llm.py  qask.py
scripts/: install_completion.sh
